# ucrs

./: CMakeLists.txt  INSTALLATION.md  README.md  UCRS.pro
resources/: resources.qrc
src/: Course.cpp  Course.h  Database.cpp  Database.h  Exceptions.h  FileHandler.cpp  FileHandler.h  Person.cpp  Person.h  RegistrationSystem.cpp  RegistrationSystem.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  mainwindow.cpp  mainwindow.h
